holy shit server actions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,24 @@
     --background-start-rgb: 1, 14, 20;
     --background-end-rgb: 59, 59, 59;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 0 black;
+    background: black;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #222;
+    border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
